Fix critics background images too small on small devices

--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
   top: 50%;
   left: 50%;
   z-index: 2;
-  width: 25%;
+  width: 30%;
+  height: 30%;
   transform: translate(-50%, -50%);
 }
 
@@ -79,7 +80,7 @@ body {
 
   .critics {
     margin-top: 2rem;
-    width: 40%;
+    width: 99%;
     height: 20rem;
   }
 
